--- a/sandbox-maven/pom.xml
+++ b/sandbox-maven/pom.xml
@@ -23,6 +23,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.14.1</version>
+  </dependency>
   </dependencies>
   
   <distributionManagement>
